--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,10 @@
 .x--mb {
     margin-bottom: 12px;
 }
+.x--mv {
+    margin-bottom: 12px;
+    margin-top: 12px;
+}
 .full-width {
     width: 100%;
 }
@@ -51,4 +55,14 @@
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+.container > .row.shop-row {
+    padding: 10px 0 10px;
+    font-size: 20px;
+    border-bottom: 1px solid #ddd;
+}
+
+.container > .row.shop-row .glyphicon {
+    font-size: 14px;
 }
