--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,9 @@
 .x--bt {
     border-top: solid 1px grey;
 }
-
+.x--pl {
+    padding-left: 12px;
+}
 .x--ph {
     padding-left: 12px;
     padding-right: 12px;
@@ -22,6 +24,16 @@
 }
 .x--mb {
     margin-bottom: 12px;
+}
+.x--mv-s {
+    margin-bottom: 6px;
+    margin-top: 6px;
+}
+hr {
+    margin: 6px 0 6px 0 !important; 
+}
+.x--p {
+    padding: 12px;
 }
 .full-width {
     width: 100%;
@@ -55,5 +67,7 @@
 
 .small-image {
     width: 50px;
-    height: 50px;
+}
+.inline-block {
+    display: inline-block;
 }
