--- a/css/style.css
+++ b/css/style.css
@@ -78,3 +78,22 @@ hr {
 .inline-block {
     display: inline-block;
 }
+
+
+.container > .row.shop-row {
+    padding: 10px 0 10px;
+    font-size: 20px;
+    border-bottom: 1px solid #ddd;
+}
+
+.container > .row.shop-row .glyphicon {
+    font-size: 18px;
+}
+
+.container > .row.shop-row > .rating {
+    float: right;
+}
+
+.container > .row.shop-row > .name {
+    font-weight: bold;
+}
