padding on atgal

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,9 @@
 .x--pl {
     padding-left: 12px;
 }
+.x--pt {
+    padding-top: 12px;
+}
 .x--ph {
     padding-left: 12px;
     padding-right: 12px;
